index.html 최신 내용 반영

--- a/OneDrive/바탕 화면/worldoperafestival/index.html
+++ b/OneDrive/바탕 화면/worldoperafestival/index.html
@@ -1,67 +1,41 @@
-
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>세계4대오페라축제 | 홈페이지 개편 안내</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>공사중입니다</title>
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
     body {
-      font-family: 'Noto Sans KR', sans-serif;
-      background-color: #f4f4f4;
+      font-family: sans-serif;
+      background: #f4f4f4;
       color: #333;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
       text-align: center;
-      padding: 20px;
+      padding: 100px 20px;
     }
-
-    .container {
-      max-width: 600px;
+    img {
+      max-width: 200px;
+      margin-bottom: 40px;
     }
-
     h1 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
+      font-size: 32px;
+      margin-bottom: 16px;
     }
-
     p {
-      font-size: 1.1rem;
-      line-height: 1.6;
-      margin-bottom: 1.5rem;
+      font-size: 18px;
+      margin: 6px 0;
     }
-
-    .logo {
-      font-size: 1.3rem;
-      font-weight: bold;
-      margin-bottom: 2rem;
-      color: #000;
-    }
-
-    footer {
-      font-size: 0.9rem;
-      color: #999;
+    .email {
+      margin-top: 40px;
+      font-size: 16px;
+      color: #555;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="logo">세계4대오페라축제</div>
-    <h1>홈페이지 개편 작업 중입니다</h1>
-    <p>
-      더 나은 서비스와 정보를 위해<br />
-      현재 홈페이지를 새롭게 개편 중입니다.<br />
-      곧 새로운 모습으로 찾아뵙겠습니다.
-    </p>
-    <footer>문의: info@worldoperafestival.com</footer>
-  </div>
+  <img src="logo.png" alt="로고">
+  <h1>오페라 공연 문화를 선도하는 세계4대오페라축제 입니다.</h1>
+  <p>현재 홈페이지 개편 작업중입니다.</p>
+  <p>더 나은 모습으로 곧 찾아뵙겠습니다.</p>
+  <div class="email">문의: worldoperafestival@gmail.com</div>
 </body>
 </html>
